# Percepti.-Screen-Vision-Assistant

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
